refactor: finalize backend code quality and resolve Sonar issues